--- a/templates/userWeb/index.html
+++ b/templates/userWeb/index.html
@@ -17,10 +17,10 @@
                       </div>
                       <div id="navbar" class="navbar-collapse collapse">
                           <ul class="nav navbar-nav">
-                              <li class="active"><a href="index" class="">主页</a></li>
-                              <li><a href="price">购买套餐</a></li>
-                              <li><a href="news">最新消息</a></li>
-                              <li><a href="#">帮助</a></li>
+                              <li class="active"><a href="/index" class="">主页</a></li>
+                              <li><a href="/pricing">购买套餐</a></li>
+                              <li><a href="/news">最新消息</a></li>
+                              <li><a href="/help">帮助</a></li>
                           </ul>
                           <ul class="nav navbar-nav pull-right">
                             <li><a href="login">登录</a></li> 
@@ -94,7 +94,7 @@
           </div>  
         </div>
         <div class="second-page">
-
+            <div class="shead"><h2>选择适合您的计划</h2></div>
             <div class="container-fluid">
                     <div class="row">
                             <div class="col-sm-6 col-md-4 col-lg-4">
@@ -104,66 +104,66 @@
                                                     <p class="text-center">流量限制计划</p>
                                             </div>
                                             <div class="panel-body text-center">
-                                                    <p class="lead" style="font-size:30px"><strong>15元/月</strong></p>
+                                                    <p class="lead" style="font-size:30px"><strong>15元/月 起</strong></p>
                                             </div>
                                             <ul class="list-group list-group-flush text-center">
                                                     <li class="list-group-item">
-                                                            <span class="glyphicon glyphicon-calendar"></span> Unlimited Events
+                                                            <span class="glyphicon glyphicon-calendar"></span> 5G 流量每月
                                                     </li>
                                                     <li class="list-group-item">
-                                                            <span class="glyphicon glyphicon-envelope"></span> Unlimited Email Invitations
+                                                            <span class="glyphicon glyphicon-envelope"></span> 适合浏览国外网站，普清视频
                                                     </li>
                                                     <li class="list-group-item">
-                                                            <span class="glyphicon glyphicon-heart"></span> Fantastic Support
+                                                            <span class="glyphicon glyphicon-heart"></span>套餐流量可升级
                                                     </li>
                                             </ul>
-                                            <div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">SUBSCRIBE</a> </div>
+                                            <div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">注册</a> </div>
                                     </div>
                             </div>
                             <div class="col-sm-6 col-md-4 col-lg-4">
                                     <div class="panel panel-success">
                                             <div class="panel-heading">
-                                                    <h3 class="text-center">LARGE TEAM</h3>
-                                                    <p class="text-center">MAX TEAM SIZE 100</p>
+                                                    <h3 class="text-center">高级计划</h3>
+                                                    <p class="text-center">流量无限套餐</p>
                                             </div>
                                             <div class="panel-body text-center">
-                                                    <p class="lead" style="font-size:30px"><strong>$60/month</strong></p>
+                                                    <p class="lead" style="font-size:30px"><strong>30元/月 起</strong></p>
                                             </div>
                                             <ul class="list-group list-group-flush text-center">
                                                     <li class="list-group-item">
-                                                            <span class="glyphicon glyphicon-calendar"></span> Unlimited Events
+                                                            <span class="glyphicon glyphicon-calendar"></span>流量无限制
                                                     </li>
                                                     <li class="list-group-item">
-                                                            <span class="glyphicon glyphicon-envelope"></span> Unlimited Email Invitations
+                                                            <span class="glyphicon glyphicon-envelope"></span>可看720p高清视频
                                                     </li>
                                                     <li class="list-group-item">
-                                                            <span class="glyphicon glyphicon-heart"></span> Fantastic Support
+                                                            <span class="glyphicon glyphicon-heart"></span>可升级计划
                                                     </li>
                                             </ul>
-                                            <div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">SUBSCRIBE</a> </div>
+                                            <div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">注册</a> </div>
                                     </div>
                             </div>
                             <div class="col-sm-6 col-md-4 col-lg-4">
                                     <div class="panel panel-success">
                                             <div class="panel-heading">
-                                                    <h3 class="text-center">LARGE TEAM</h3>
-                                                    <p class="text-center">MAX TEAM SIZE 100</p>
+                                                    <h3 class="text-center">至尊计划</h3>
+                                                    <p class="text-center">适合多人抱团使用</p>
                                             </div>
                                             <div class="panel-body text-center">
-                                                    <p class="lead" style="font-size:30px"><strong>$60/month</strong></p>
+                                                    <p class="lead" style="font-size:30px"><strong>80元/月</strong></p>
                                             </div>
                                             <ul class="list-group list-group-flush text-center">
                                                     <li class="list-group-item">
-                                                            <span class="glyphicon glyphicon-calendar"></span> Unlimited Events
+                                                            <span class="glyphicon glyphicon-calendar"></span>流量无限制
                                                     </li>
                                                     <li class="list-group-item">
-                                                            <span class="glyphicon glyphicon-envelope"></span> Unlimited Email Invitations
+                                                            <span class="glyphicon glyphicon-envelope"></span>高清视频支持
                                                     </li>
                                                     <li class="list-group-item">
-                                                            <span class="glyphicon glyphicon-heart"></span> Fantastic Support
+                                                            <span class="glyphicon glyphicon-heart"></span>可供10个设备连接
                                                     </li>
                                             </ul>
-                                            <div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">SUBSCRIBE</a> </div>
+                                            <div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">注册</a> </div>
                                     </div>
                             </div>
                     </div>
@@ -172,80 +172,66 @@
 
         </div>
         <div class="third-page">
-            <div class="ft"><h1>另一个领域的故事</h1></div>
-            <div class="container-fluid featurepage1">
-              <div class="row">
-                <div class="feature col-xs-4 col-md-4 cols-lg-4">
-                    <div class="feature-box">
-                        <div class="feature-img">
-                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
+                <div class="thead">
+                    <h2 class="section-title">简单 强大 可靠</h2>
+                    <p class="section-desc">我们选用最优质的服务器和最优化的线路为您的冲浪保驾护航</p>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-6">
+                            <div class="feature"><i class="fa fa-sitemap fa-4x" aria-hidden="true"></i>
+                                <h5>Activate in minutes, online 24x7</h5>
+                            </div>
                         </div>
-                        <div class="feature-words">
-                            <h3>第一章</h3>
-                            <h4>踏破马蹄无处寻</h4>
+                        <!-- /.feature -->
+                        <div class="col-sm-3 col-xs-6">
+                            <div class="feature"><i class="fa fa-globe fa-4x" aria-hidden="true"></i>
+                                <h5>15 low latency locations</h5>
+                            </div>
                         </div>
+                        <!-- /.feature -->
+                        <div class="clear-xs"></div>
+                        <div class="col-sm-3 col-xs-6">
+                            <div class="feature"><i class="fa fa-deaf fa-4x" aria-hidden="true"></i>
+                                <h5>100% SLA guaranteed</h5>
+                            </div>
+                        </div>
+                        <!-- /.feature -->
+                        <div class="col-sm-3 col-xs-6">
+                            <div class="feature"><i class="fa fa-anchor fa-4x" aria-hidden="true"></i>
+                                <h5>Solid-state drives</h5>
+                            </div>
+                        </div>
+                        <!-- /.feature -->
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-6">
+                            <div class="feature"><i class="fa fa-thermometer-empty fa-4x" aria-hidden="true"></i>
+                                <h5>Powerful infrastructure</h5>
+                            </div>
+                        </div>
+                        <!-- /.feature -->
+                        <div class="col-sm-3 col-xs-6">
+                            <div class="feature"><i class="fa fa-microchip fa-4x" aria-hidden="true"></i>
+                                <h5>Feature-rich control panel</h5>
+                            </div>
+                        </div>
+                        <!-- /.feature -->
+                        <div class="clear-xs"></div>
+                        <div class="col-sm-3 col-xs-6">
+                            <div class="feature"><i class="fa fa-camera-retro fa-4x" aria-hidden="true"></i> 
+                                <h5>Root administrator access</h5>
+                            </div>
+                        </div>
+                        <!-- /.feature -->
+                        <div class="col-sm-3 col-xs-6">
+                            <div class="feature"><i class="fa fa-handshake-o fa-4x" aria-hidden="true"></i>
+                                <h5>Hourly billing</h5>
+                            </div>
+                        </div>
+                        <!-- /.feature -->
                     </div>
                 </div>
-                <div class="feature col-xs-4 col-md-4 cols-lg-4">
-                    <div class="feature-box">
-                        <div class="feature-img">
-                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
-                        </div>
-                        <div class="feature-words">
-                            <h3>第一章</h3>
-                            <h4>踏破马蹄无处寻</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="feature col-xs-4 col-md-4 cols-lg-4">
-                    <div class="feature-box">
-                        <div class="feature-img">
-                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
-                        </div>
-                        <div class="feature-words">
-                            <h3>第一章</h3>
-                            <h4>踏破马蹄无处寻</h4>
-                        </div>
-                    </div>
-                </div>
-              </div>  
-            </div>
-            <div class="container-fluid featurepage2">
-              <div class="row">
-                <div class="feature col-xs-4 col-md-4 cols-lg-4">
-                    <div class="feature-box">
-                        <div class="feature-img">
-                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
-                        </div>
-                        <div class="feature-words">
-                            <h3>第一章</h3>
-                            <h4>踏破马蹄无处寻</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="feature col-xs-4 col-md-4 cols-lg-4">
-                    <div class="feature-box">
-                        <div class="feature-img">
-                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
-                        </div>
-                        <div class="feature-words">
-                            <h3>第一章</h3>
-                            <h4>踏破马蹄无处寻</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="feature col-xs-4 col-md-4 cols-lg-4">
-                    <div class="feature-box">
-                        <div class="feature-img">
-                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
-                        </div>
-                        <div class="feature-words">
-                            <h3>第一章</h3>
-                            <h4>踏破马蹄无处寻</h4>
-                        </div>
-                    </div>
-                </div>
-              </div>  
             </div>
         </div>
 {% endblock %}
