--- a/static/userWeb/css/control/cbase.css
+++ b/static/userWeb/css/control/cbase.css
@@ -91,7 +91,7 @@ border: none;
 footer .foot
 {
   background: #000;
-  color: #fff;
+  color: rgba(232, 248, 236, 0.62);
   text-align: center;
   height: 80px;
   padding-top: 20px;
