--- a/templates/userWeb/news.html
+++ b/templates/userWeb/news.html
@@ -1,19 +1,69 @@
-{% extends "userWeb/base.html"  %}
+{% extends "userWeb/base.html" %}
 {% block content %}
-        <link rel="stylesheet" href="/static/userWeb/css/custom_news.css">
-        <div class="news-page">
-            <ul>
-                {% for news in news_list %}
-                <li>
-                    <h2 class="title">
-                        {{ news.title }}
-                    </h2>
-                    <div class="publish-time">{{news.created_time|date:"n月j日，Y"}}</div>
-                    <p>{{news.body|safe}}</p>
-                    <div class="hr"></div>
-                </li>
-           {% endfor%}
+<link rel="stylesheet" href="/static/userWeb/css/control/news.css">
 
-            </ul>
+      <link rel="stylesheet" href="/static/userWeb/css/custom_price.css">
+      <div class="navbar-wrapper">
+          <div class="container-fluid">
+              <nav class="navbar navbar-fixed-top">
+                  <div class="container">
+                      <div class="navbar-header">
+                          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                          <span class="sr-only">Toggle navigation</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          </button>
+                          <a class="navbar-brand" href="#">Logo</a>
+                      </div>
+                      <div id="navbar" class="navbar-collapse collapse">
+                          <ul class="nav navbar-nav">
+                              <li><a href="/index" class="">主页</a></li>
+                              <li><a href="/pricing">购买套餐</a></li>
+                              <li class="active"><a href="/news">最新消息</a></li>
+                              <li><a href="/help">帮助</a></li>
+                          </ul>
+                          <ul class="nav navbar-nav pull-right">
+                            <li><a href="login">登录</a></li> 
+                            <li><a href="regist">注册</a></li>
+
+                          </ul>
+                      </div>
+                  </div>
+              </nav>
+          </div>
+      </div>
+
+
+    <div class="container-fluid news">
+        <div class="headbar">
+            <h2>最新消息</h2>
+            <div class="hr"></div>
         </div>
+        <ul class="timeline">
+            {% for news in news_list %}
+
+            <li>
+            <div class="timeline-badge {{news.category}}">
+                {% if news.category == "info"%}
+                    <i class="fa fa-info" aria-hidden="true"></i>
+                {% else %}
+                    <i class="fa fa-exclamation" aria-hidden="true"></i>
+                {% endif %}
+            </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                    <h4 class="timeline-title">{{ news.title}}</h4>
+                    <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>{{news.created_time|date:"n月j日，Y"}}</small></p>
+                </div>
+                <div class="timeline-body">
+                    <p>{{news.body|safe}}</p>
+                </div>
+              </div>
+            </li>
+            <li>
+            {% endfor %}
+        </ul>
+    </div>
+
 {% endblock %}
