--- a/templates/userWeb/control/userctrl.html
+++ b/templates/userWeb/control/userctrl.html
@@ -80,7 +80,7 @@
             <div class="control col-sm-12 col-md-3 col-md-offset-3 col-lg-3 col-lg-offset-1">
                 <ul class="list-group">
                     <li class="list-group-item man"><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp;操作</li>
-                    <a href="#" class="list-group-item"><i class="fa fa-key" aria-hidden="true"></i>&nbsp;&nbsp;修改密码</a>
+                    <a href="/resetpassword" class="list-group-item"><i class="fa fa-key" aria-hidden="true"></i>&nbsp;&nbsp;修改密码</a>
                     <a href="#" class="list-group-item"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;&nbsp;购买服务</a>
                     <a href="#" class="list-group-item"><i class="fa fa-file-o" aria-hidden="true"></i>&nbsp;&nbsp;我的订单</a>
                 </ul>
