--- a/templates/userWeb/getbackpasswd.html
+++ b/templates/userWeb/getbackpasswd.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>dream: login</title>
+        <title>Logo: 找回密码</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
@@ -42,32 +42,23 @@
                         	<div class="form-top">
                         		<div class="form-top-left">
                                     <a href="/index"><h2>Logo</h2></a>
-                            		<p>请登录</p>
+                            		<p>密码找回</p>
                         		</div>
                         		<div class="form-top-right">
                         			<i class="fa fa-key"></i>
                         		</div>
                             </div>
                             <div class="form-bottom">
-                                <div><p style="color: {{ color }}">{{ keywords }}</p>
+                                <div><p style="color: {{ color }}">{{ info }}</p>
                                 </div>
 			                    <form role="form" action="" method="post" class="login-form">
                                     {% csrf_token %}
 			                    	<div class="form-group">
 			                    		<label class="sr-only" for="form-username">Username</label>
-			                        	<input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="form-username">
+                                        <p>请输入您的邮箱</p>
+			                        	<input type="text" name="form-username" placeholder="Your Email..." class="form-username form-control" id="form-username">
 			                        </div>
-			                        <div class="form-group">
-			                        	<label class="sr-only" for="form-password">Password</label>
-			                        	<input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
-			                        </div>
-                                      <div class="checkbox">
-                                        <label>
-                                          <input type="checkbox" value="1" name="check_auto_login" id="check_auto_login"/>一周内自动登录
-                                        </label>
-                                      </div>
-                                      <a href="getbackpasswd">忘记密码?</a>
-			                        <button type="submit" class="btn">登录</button>
+			                        <button type="submit" class="btn">找回密码</button>
 			                    </form>
 		                    </div>
                         </div>
