--- a/templates/userWeb/regist.html
+++ b/templates/userWeb/regist.html
@@ -41,25 +41,30 @@
                         <div class="col-sm-6 col-sm-offset-3 form-box">
                         	<div class="form-top">
                         		<div class="form-top-left">
-                        			<h2>你好</h2>
-                            		<p>Enter your username and password to log on:</p>
+                                    <a href="/index"><h2>Logo</h2></a>
+                            		<p>欢迎注册我们的网站！</p>
                         		</div>
                         		<div class="form-top-right">
                         			<i class="fa fa-key"></i>
                         		</div>
                             </div>
                             <div class="form-bottom">
+                                <div><p style="color: {{ color }}">{{ info }}</p></div>
 			                    <form role="form" action="" method="post" class="login-form">
                                     {% csrf_token %}
 			                    	<div class="form-group">
                                             <span class="glyphicon glyphicon-user"></span>
                                             <label class="sr-only" for="form-username">Username</label>
-                                            <input type="text" name="form-username" placeholder="Username..." class="form-username form-control " id="form-username">
+                                            <input type="text" name="form-username" placeholder="Choose an Username..." class="form-username form-control " id="form-username">
 			                        </div>
 			                        <div class="form-group">
 			                        	<label class="sr-only" for="form-password">Password</label>
-			                        	<input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
+			                        	<input type="password" name="form-password" placeholder="Choose a Password..." class="form-password form-control" id="form-password">
 			                        </div>
+			                        <div class="form-group">
+			                        	<label class="sr-only" for="form-repassword">rePassword</label>
+			                        	<input type="password" name="form-repassword" placeholder="Comfirm your Password..." class="form-password form-control" id="form-repassword">
+                                    </div>
 			                        <button type="submit" class="btn">Sign in!</button>
 			                    </form>
 		                    </div>
