--- a/templates/userWeb/login.html
+++ b/templates/userWeb/login.html
@@ -61,9 +61,9 @@
 			                        	<label class="sr-only" for="form-password">Password</label>
 			                        	<input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
 			                        </div>
-                                      <div class="checkbox">
+                                      <div class="form-group">
                                         <label>
-                                          <input type="checkbox" value="1" name="check_auto_login" id="check_auto_login"/>一周内自动登录
+                                          <input type="checkbox" name="check_auto_login" id="check_auto_login">一周内自动登录
                                         </label>
                                       </div>
                                       <a href="getbackpasswd">忘记密码?</a>
