--- a/static/userWeb/css/control/cbase.css
+++ b/static/userWeb/css/control/cbase.css
@@ -3,6 +3,19 @@ body
 height: 100%;
 }
 
+.navbar-logo
+{
+height: 56px;
+margin-right: 40px;
+margin-left:20px;
+}
+
+.navbar-logo img
+{
+height: 100%
+}
+
+
 .navbar-nav>li {
 height:65px;
 }
