--- a/templates/userWeb/regist.html
+++ b/templates/userWeb/regist.html
@@ -41,11 +41,10 @@
                         <div class="col-sm-6 col-sm-offset-3 form-box">
                         	<div class="form-top">
                         		<div class="form-top-left">
-                                    <a href="/index"><h2>Logo</h2></a>
-                            		<p>欢迎注册我们的网站！</p>
-                        		</div>
-                        		<div class="form-top-right">
-                        			<i class="fa fa-key"></i>
+                                    <a href="/index"><img src="/media/icons/logo_green.png"></a>
+                                  <div class="func">
+                                    <h3>欢迎注册</h3>
+                                  </div>
                         		</div>
                             </div>
                             <div class="form-bottom">
