--- a/templates/userWeb/resetpasswd.html
+++ b/templates/userWeb/resetpasswd.html
@@ -41,12 +41,11 @@
                         <div class="col-sm-6 col-sm-offset-3 form-box">
                         	<div class="form-top">
                         		<div class="form-top-left">
-                                    <a href="/index"><h2>Logo</h2></a>
-                            		<p>请重置您的密码</p>
+                                    <a href="/index"><img src="/media/icons/logo_green.png"></a>
+                                  <div class="func">
+                            		<h3>请重置您的密码</h3>
                                     <p>{{ username }}</p>
-                        		</div>
-                        		<div class="form-top-right">
-                        			<i class="fa fa-key"></i>
+                                  </div>
                         		</div>
                             </div>
                             <div class="form-bottom">
