--- a/templates/userWeb/login.html
+++ b/templates/userWeb/login.html
@@ -41,11 +41,10 @@
                         <div class="col-sm-6 col-sm-offset-3 form-box">
                         	<div class="form-top">
                         		<div class="form-top-left">
-                                    <a href="/index"><h2>Logo</h2></a>
-                            		<p>请登录</p>
-                        		</div>
-                        		<div class="form-top-right">
-                        			<i class="fa fa-key"></i>
+                                    <a href="/index"><img src="/media/icons/logo_green.png"></a>
+                        		  <div class="func">
+                                    <h3>请登录</h3>
+                        		  </div>
                         		</div>
                             </div>
                             <div class="form-bottom">
@@ -80,7 +79,7 @@
 
 
         <!-- Javascript -->
-        <script src="/static/jquery/jquery-min.js"></script>
+        <script src="/static/jquery/jquery.min.js"></script>
         <script src="/static/bootstrap/js/bootstrap.min.js"></script>
         
         <!--[if lt IE 10]>
